[project]
name = "adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=2.0.0",
    "google-cloud-resource-manager>=1.17.0",
    "litellm>=1.85.0",
    "ollama>=0.6.2",
    "openai>=2.37.0",
    "yfinance>=1.3.0",
]
